--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -1,18 +1,34 @@
 * {
   box-sizing: border-box;
-  color: #00264d;
+  font-family: "Ubuntu", sans-serif;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   -webkit-tap-highlight-color: transparent;
 }
 
+*,
+*:after,
+*:before {
+  box-sizing: inherit;
+}
+
 body {
+  color: #00264d;
+  padding: 0;
   margin: 0;
   height: 100%;
-  width: 100%;
 }
 
 .container {
+  background-color: white;
   height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+@media (min-width: 1000px) {
+  .container {
+    flex-direction: row;
+  }
 }
 
 button {
