--- a/client/src/styles/header/MenuButton.css
+++ b/client/src/styles/header/MenuButton.css
@@ -24,7 +24,7 @@
 #brand-logo {
   font-weight: bold;
   font-size: 1.2rem;
-  height: 100%;
+  height: 60px;
   display: flex;
   align-items: center;
 }
